Implementa CRUD para la administración de cines
Se ha implementado la funcionalidad completa de Crear, Leer, Actualizar y ver Detalles (CRUD) para la gestión de cines desde el perfil de administrador.

Cambios principales:
- Se agregan los campos 'usuario' y 'id_estado_cine' al modelo de datos `Cine`.
- Se implementan diálogos modales para crear, actualizar y ver los detalles de un cine.
- Se añaden los layouts XML (`crear_cine.xml`, `actualizar_cine.xml`, `detalles_cine.xml`) para las nuevas vistas.
- Se integra la lógica para enviar las peticiones de creación y actualización al backend a través de Volley.
- La consulta de búsqueda de cines ahora incluye el estado y el nombre de usuario.
- Se define una interfaz (`OnCineUpdateListener`) para refrescar la lista de cines después de una actualización.
- Se añaden recursos de strings para los estados del cine y tipos de documento.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">Kinora</string>
+    <string-array name="estados_cine">
+        <item>Disponible</item>
+        <item>Inhabilitado</item>
+    </string-array>
+    <string-array name="tipos_documento">
+        <item>Cedula de ciudadanía</item>
+        <item>Tarjeta de identidad</item>
+        <item>Cedula de extranjeria</item>
+        <item>Pasaporte</item>
+        <item>NIT</item>
+    </string-array>
 </resources>
